--- a/homework1.html
+++ b/homework1.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="homework1.css">
+    <link rel="stylesheet" href="homework.css">
     <title>website</title>
 </head>
 
